# WorkCode

./: API说明文档编写指南.docx  cpp.tpl
Week01/Lua/: LuaInCpp.docx
Week01/Lua/Lua53_msvc/: CMakeLists.txt
Week01/Lua/Lua53_msvc/lua/: CMakeLists.txt
Week01/Lua/Lua53_msvc/luac/: CMakeLists.txt
Week01/Lua/Lua53_msvc/lualib/: CMakelists.txt
Week01/Lua/LuaCallCpp/: CMakeLists.txt  CppMethord.cpp  CppMethord.h  LuaCallCpp.code-workspace  TestCppAdd.lua  luac.out  main.cpp
Week01/PLC/: plc通讯协议.docx
Week01/PLC/Opc Ua/: CMakeLists.txt  build.bat  main.cpp
Week01/PLC/Opc Ua/OpcUa.ConnectService/: main.cpp
Week01/PLC/Opc Ua/OpcUa.RunService/: CMakelists.txt  main.cpp
Week01/PLC/Opc Ua/include/: OpcUaWrapper.h  open62541.h
Week01/PLC/Opc Ua/lib/Debug/: OpcUaWrapper.lib
Week01/PLC/Opc Ua/src/: CMakeLists.txt  OpcUaWrapper.cpp
转正/: 0李柯转正汇报.pptx
